vhdl-fmt/tests/snapshots/formatter_tests__architecture_preamble_spaces_are_normalized.snap
---
source: vhdl-fmt/tests/formatter_tests.rs
expression: "fmt_str(\"architecture  my_arch  of  work  is\\nbegin\\nend ;\")"
---
architecture my_arch of work is
begin
end;
