vhdl-fmt/tests/snapshots/formatter_tests__architecture_preamble_trailing_comment_is_handled.snap
---
source: vhdl-fmt/tests/formatter_tests.rs
expression: "fmt_str(\"\\\narchitecture rtl of my_entity is -- top comment\nbegin\nend ;\")"
---
architecture rtl of my_entity is -- top comment
begin
end;
