vhdl-fmt/tests/snapshots/formatter_tests__consecutive_declarations_do_not_influence_formatting_of_each_other.snap
---
source: vhdl-fmt/tests/formatter_tests.rs
expression: formatted
---
architecture foo of bar is
    signal a : bit; -- Comment
    signal b : std_logic;
begin
end foo;
