vhdl-fmt/tests/snapshots/formatter_tests__does_not_split_into_multiple_lines_for_elements_shorter_than_the_maximum_column_width.snap
---
source: vhdl-fmt/tests/formatter_tests.rs
expression: formatted
---
package foo is
    function f(short_arg : std_logic);
end;
