vhdl-fmt/tests/snapshots/formatter_tests__entity_preamble_spaces_are_normalized.snap
---
source: vhdl-fmt/tests/formatter_tests.rs
expression: "fmt_str(\"entity  my_entity  is\\nend ;\")"
---
entity my_entity is
end;
