vhdl-fmt/tests/snapshots/formatter_tests__splits_into_multiple_lines_for_elements_longer_than_the_maximum_column_width.snap
---
source: vhdl-fmt/tests/formatter_tests.rs
expression: formatted
---
package foo is
    function function_with_long_name(
        argument_name_that_is_very_long : type_name_that_is_equally_long
    );
end;
