vhdl-fmt/tests/snapshots/formatter_tests__trailing_comment_is_hoisted_before_last_other_comment.snap
---
source: vhdl-fmt/tests/formatter_tests.rs
expression: formatted
---
package pkg is
    type my_record is
    record
        -- other comment
        -- describes field_a
        field_a : std_logic;
        field_b : integer;
    end record;
end pkg;
